# MoturGateway

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
app/: CMakeLists.txt  main.cpp
cmake-modules/: FindBluez.cmake
docker/: Dockerfile
docs/diagrams/: connection.dia  subscription_storage.rst
inc/bt/: MoturBtService.hpp
inc/bt/impl/: BluezWrapper.hpp  defs.hpp
inc/exceptions/: InitializationException.hpp
src/: CMakeLists.txt
src/bt/: CMakeLists.txt
src/bt/impl/: BluezWrapper.cpp
src/common/: CMakeLists.txt
src/common/exceptions/: IncorrectValueException.cpp  IncorrectValueException.hpp  ItemNotRetrievedException.cpp  UnknownFailureException.hpp
src/common/log/: CMakeLists.txt  MainLogger.hpp
src/common/log/impl/: MainLoggerImpl.cpp  MainLoggerImpl.hpp
src/exceptions/: InitializationException.cpp
src/modules/: CMakeLists.txt
src/modules/common/exceptions/: CMakeLists.txt  IMoturException.hpp  InitializationException.cpp  InitializationException.hpp  ItemNotRetrievedException.hpp  UnknownFailureException.cpp
src/modules/common/log/: CMakeLists.txt  ILogger.hpp  MainLogger.cpp  MainLogger.hpp
src/modules/common/log/impl/: MainLoggerImpl.cpp
src/modules/connection/: CMakeLists.txt
src/modules/connection/inc/connection/: ConnectionModule.hpp
src/modules/connection/inc/connection/conn_ctrl/: ConnectionControl.hpp  HandleRecipes.hpp  IProcessingQueue.hpp  Job.hpp  ProcessingQueue.hpp
src/modules/connection/inc/connection/conn_ctrl/hci_ev_handlers/: ConnectionCompleteHandler.hpp  ConnectionRequestHandler.hpp  InquiryCompleteHandler.hpp
src/modules/connection/inc/connection/conn_ctrl/scenarios/: IScenario.hpp  IStep.hpp  ReadBDAddrStep.hpp  StartupScenario.hpp
src/modules/connection/inc/connection/defs/: BtDeviceAddress.hpp  HciCommand.hpp  HciCommandTypes.hpp  HciCommandsConverter.hpp  HciCommon.hpp  HciEvent.hpp  HciEventParser.hpp  HciReturnParametersConverter.hpp  HciTypes.hpp  IHciCommandsConverter.hpp  IHciReturnParametersConverter.hpp
src/modules/connection/inc/connection/hci/: HciObjectsBuilder.hpp  HciPoller.hpp  HciRequestExecutor.hpp  HciSocket.hpp  IHciObjectsBuilder.hpp  IHciSocket.hpp  IRequestsExecutionQueue.hpp  ISubscriptionsStorage.hpp  RequestsExecutionQueue.hpp  SubscriptionGuard.hpp  SubscriptionsStorage.hpp
src/modules/connection/inc/connection/hci/handlers/: IReqHandler.hpp  ReadBDAddrHandler.hpp
src/modules/connection/inc/connection/hci/procedures/: EventsPollingProcedure.hpp
src/modules/connection/inc/connection/hci_async/: HciEventsSocket.hpp  ISubscriptionsStorage.hpp  SubscriptionsStorage.hpp
src/modules/connection/inc/connection/utils/: ConnectionContext.hpp  IConnectionContext.hpp
src/modules/connection/inc/connection/workers/: ConnectionManager.hpp  HciAsyncEventsDispatcher.hpp  HciMessenger.hpp  HciRequestsProcessor.hpp  IWorker.hpp
src/modules/connection/src/: CMakeLists.txt  ConnectionModule.cpp
src/modules/connection/src/conn_ctrl/: CMakeLists.txt  ConnectionControl.cpp  HandleRecipes.cpp  Job.cpp  ProcessingQueue.cpp
src/modules/connection/src/conn_ctrl/hci_ev_handlers/: ConnectionCompleteHandler.cpp  ConnectionRequestHandler.cpp  InquiryCompleteHandler.cpp
src/modules/connection/src/conn_ctrl/scenarios/: ReadBDAddrStep.cpp  StartupScenario.cpp
src/modules/connection/src/defs/: BtDeviceAddress.cpp  CMakeLists.txt  HciCommand.cpp  HciCommandsConverter.cpp  HciEventParser.cpp  HciReturnParametersConverter.cpp
src/modules/connection/src/hci/: CMakeLists.txt  HciObjectsBuilder.cpp  HciPoller.cpp  HciRequestExecutor.cpp  HciSocket.cpp  RequestsExecutionQueue.cpp  SubscriptionGuard.cpp  SubscriptionsStorage.cpp
src/modules/connection/src/hci/handlers/: ReadBDAddrHandler.cpp
src/modules/connection/src/hci_async/: CMakeLists.txt  HciEventsSocket.cpp  SubscriptionsStorage.cpp
src/modules/connection/src/utils/: CMakeLists.txt  ConnectionContext.cpp
src/modules/connection/src/workers/: CMakeLists.txt  ConnectionManager.cpp  HciAsyncEventsDispatcher.cpp  HciRequestsProcessor.cpp
test/: CMakeLists.txt
test/base/: CMakeLists.txt  ConnectionTestBase.cpp  ConnectionTestBase.hpp  TestLogger.cpp  TestLogger.hpp
test/bt/impl/: BluezWrapperTests.cpp
test/common/: CMakeLists.txt
test/common/log/: CMakeLists.txt  MainLoggerTests.cpp
test/mocks/: CMakeLists.txt  IConnectionContextMock.hpp  ISubscriptionsStorageMock.hpp  LibBluezMock.cpp  LibBluezMock.hpp
test/modules/: CMakeLists.txt
test/modules/connection/: CMakeLists.txt
test/modules/connection/hci/: CMakeLists.txt  SubscriptionsStorageTests.cpp
test/modules/connection/hci_async/: CMakeLists.txt
